--- a/dua_lipa.html
+++ b/dua_lipa.html
@@ -1,27 +1,27 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Celebrity Hub</title>
+  <title>Dua Lipa</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to Celebrity Hub</h1>
+    <h1>Dua Lipa</h1>
     <nav>
       <ul>
-        <li><a href="dua_lipa.html">Dua Lipa</a></li>
-        <li><a href="Ronaldo.html">Cristiano Ronaldo</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="cristiano_ronaldo.html">Cristiano Ronaldo</a></li>
         <li><a href="erling_haaland.html">Erling Haaland</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section>
-      <h2>Get to Know Your Favorite Celebrities</h2>
-      <p>Explore the lives and careers of Dua Lipa, Cristiano Ronaldo, and Erling Haaland.</p>
+      <h2>Biography</h2>
+      <p>Dua Lipa is a British singer and songwriter known for hits like "New Rules" and "Don't Start Now".</p>
+      <img src="dua_lipa.jpg" alt="Dua Lipa">
     </section>
   </main>
   <footer>
