--- a/Ronaldo.html
+++ b/Ronaldo.html
@@ -1,27 +1,27 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Celebrity Hub</title>
+  <title>Cristiano Ronaldo</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to Celebrity Hub</h1>
+    <h1>Cristiano Ronaldo</h1>
     <nav>
       <ul>
+        <li><a href="Ronaldo.html">Ronaldo</a></li>
         <li><a href="dua_lipa.html">Dua Lipa</a></li>
-        <li><a href="Ronaldo.html">Cristiano Ronaldo</a></li>
         <li><a href="erling_haaland.html">Erling Haaland</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section>
-      <h2>Get to Know Your Favorite Celebrities</h2>
-      <p>Explore the lives and careers of Dua Lipa, Cristiano Ronaldo, and Erling Haaland.</p>
+      <h2>Biography</h2>
+      <p>Cristiano Ronaldo is a Portuguese professional footballer known for his incredible skill and goal-scoring ability.</p>
+      <img src="cristiano_ronaldo.jpg" alt="Cristiano Ronaldo">
     </section>
   </main>
   <footer>
